@@ -3,7 +3,9 @@ Summary of important user-visible changes for Windows TBD
 
 * added new function 'windows_feature', win32_RegEnumValue, win32_RegEnumKey
 
-* bugfix: com[ile issue on octave <= 4.0.X
+* bugfix: compile issue on octave <= 4.0.X
+
+* bugfix: winqueryreg error on use of "name" parameter
 
 
 Summary of important user-visible changes for Windows 1.5.0
